--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Homemade+Apple&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/856a04ad70.js"
 			crossorigin="anonymous"></script>
+			<script type="text/javascript"
+			src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?tracking=1&thirdparty=1&always=1"></script>
 		<base href="/">
 		<meta name="viewport"
 			content="width=device-width, initial-scale=1">
